logs/sim2net.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/sim2net'...
Compiling './lib/python3.5/site-packages/sim2net/_network.py'...
***   File "./lib/python3.5/site-packages/sim2net/_network.py", line 109
    except KeyError, err:
                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/sim2net/area'...
Listing './lib/python3.5/site-packages/sim2net/cli'...
Compiling './lib/python3.5/site-packages/sim2net/cli/_application_template.py'...
***   File "./lib/python3.5/site-packages/sim2net/cli/_application_template.py", line 34
    print '[node %d] initialize' % self.__node_id
                               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/sim2net/cli/cli.py'...
***   File "./lib/python3.5/site-packages/sim2net/cli/cli.py", line 137
    print __DESCRIPTION
                      ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/sim2net/failure'...
Listing './lib/python3.5/site-packages/sim2net/mobility'...
Compiling './lib/python3.5/site-packages/sim2net/mobility/nomadic_community.py'...
***   File "./lib/python3.5/site-packages/sim2net/mobility/nomadic_community.py", line 312
    print "%.30f    %.30f    %.30f    %.30f" % (coordinates[0], coordinates[1], self.__reference_point[0], self.__reference_point[1])
                                           ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/sim2net/packet_loss'...
Listing './lib/python3.5/site-packages/sim2net/placement'...
Listing './lib/python3.5/site-packages/sim2net/propagation'...
Compiling './lib/python3.5/site-packages/sim2net/simulator.py'...
***   File "./lib/python3.5/site-packages/sim2net/simulator.py", line 117
    except KeyError, err:
                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/sim2net/speed'...
Listing './lib/python3.5/site-packages/sim2net/utility'...
Listing './lib/python3.5/site-packages/sim2net-3.1.2.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
